syntax = "proto3";

package northwind;

option go_package = "github.com/vietnam-devs/northwind-on-dapr/protos";
option csharp_namespace = "Northwind.Protobuf.Product";

service ProductApi {
    rpc Ping (HelloRequest) returns (HelloReply) {};
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {};
}

message HelloRequest {
    string name = 1;
}
  
message HelloReply {
    string message = 1;
}

message GetProductsRequest {}

message GetProductsResponse {
    repeated Product products = 1;
}

message Product {
    string id = 1;
    string product_name = 2;
}